--- a/introCom/templates/introCom/index.html
+++ b/introCom/templates/introCom/index.html
@@ -39,7 +39,7 @@
 				{% for field in fields %}
 					<div class="col-md-4 ftco-animate">
 						<div class="block-7">
-							<div class="img" style="background-image: url({{field.avatar}});"></div>
+							<div class="img" style="background-image: url(static/introCom/{{field.avatar}});"></div>
 
 							<div class="d-lg-flex align-items-center w-100 bg-light py-2 ">	
 								<p class="w-100 mb-0">
