--- a/introCom/templates/introCom/field.html
+++ b/introCom/templates/introCom/field.html
@@ -28,7 +28,7 @@
 			{% for field in fields %}
             <div class="col-md-12 portfolio-wrap">
                 <div class="row no-gutters align-items-center">
-                    <div class="col-md-3  img " style="height: 220px; background-image: url(/{{field.avatar}});">
+                    <div class="col-md-3  img " style="height: 220px; background-image: url(static/introCom/{{field.avatar}});">
                         
                     </div>
                     <div class="col-md-9">
