--- a/introCom/templates/introCom/team.html
+++ b/introCom/templates/introCom/team.html
@@ -21,7 +21,7 @@
 			<div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch justify-content-end">
-						<div class="img align-self-stretch" style="background-image: url(/{{team.avatar}});"></div>
+						<div class="img align-self-stretch" style="background-image: url(static/introCom/{{team.avatar}});"></div>
 					</div>
 					<div class="text d-flex align-items-center pt-3">
 						<div>
