--- a/introCom/templates/introCom/index.html
+++ b/introCom/templates/introCom/index.html
@@ -68,7 +68,7 @@
 					{% if top.id|divisibleby:"2" %}
 					<div class="col-md-12 portfolio-wrap">
 						<div class="row no-gutters align-items-center">
-							<div class="col-md-5 img " style="height: 280px; background-image: url({{top.avatar}});">
+							<div class="col-md-5 img " style="height: 280px; background-image: url(static/introCom/{{top.avatar}});">
 								
 							</div>
 							<div class="col-md-7">
@@ -93,7 +93,7 @@
 					{% else %}
 					<div class="col-md-12 portfolio-wrap">
 						<div class="row no-gutters align-items-center">
-							<div class="col-md-5 order-md-last img " style="height: 280px; background-image: url({{top.avatar}});">
+							<div class="col-md-5 order-md-last img " style="height: 280px; background-image: url(static/introCom/{{top.avatar}});">
 								
 							</div>
 							<div class="col-md-7">
@@ -137,7 +137,7 @@
 					<div class="col-md-3 d-flex ftco-animate">
 						<div class="blog-entry justify-content-end">
 						<div class="text">
-						<a href="blog-single.html" class="block-20 img" style="background-image: url('{{new.avatar}}');">
+						<a href="blog-single.html" class="block-20 img" style="background-image: url('static/introCom/{{new.avatar}}');">
 							</a>
 							<div class="meta mb-3">
 							<div><a href="#">{{new.date_created|date:"F Y"}}</a></div>
