--- a/introCom/templates/introCom/project.html
+++ b/introCom/templates/introCom/project.html
@@ -54,7 +54,7 @@
 				{% else %}
 				<div class="col-md-12 portfolio-wrap">
 					<div class="row no-gutters align-items-center">
-						<div class="col-md-5 order-md-last img " style="height: 280px; background-image: url(static/introCom/{{top.avatar}});">
+						<div class="col-md-5 order-md-last img " style="height: 280px; background-image: url(/static/introCom/{{top.avatar}});">
 							
 						</div>
 						<div class="col-md-7">
